# sqt

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  LICENSE  README.md  ROADMAP.md  claude.sh  docker-compose.yml
.github/: CI.md
.github/workflows/: fuzz.yml  test.yml
crates/smelt-backend/: Cargo.toml
crates/smelt-backend-duckdb/src/: lib.rs
crates/smelt-backend-spark/: Cargo.toml
crates/smelt-backend-spark/src/: lib.rs
crates/smelt-backend/src/: dialect.rs  error.rs  lib.rs  types.rs
crates/smelt-cli/: Cargo.toml
crates/smelt-cli/src/: compiler.rs  config.rs  discovery.rs  errors.rs  executor.rs  graph.rs  lib.rs  main.rs  metadata.rs  transformer.rs
crates/smelt-cli/tests/: incremental_test.rs
crates/smelt-datagen/: Cargo.toml
crates/smelt-datagen/src/: duckdb.rs  gen.rs  generators.rs  lib.rs  main.rs  parquet.rs  session.rs
crates/smelt-db/: Cargo.toml
crates/smelt-db/src/: lib.rs  schema.rs
crates/smelt-examples/: Cargo.toml
crates/smelt-examples/examples/: example1_naive.rs  example1_optimized.rs  example2_naive.rs  example2_optimized.rs
crates/smelt-examples/src/: lib.rs  utils.rs
crates/smelt-lsp/: Cargo.toml
crates/smelt-lsp/src/: main.rs
crates/smelt-parser/: Cargo.toml
crates/smelt-parser/fuzz/: Cargo.toml  README.md
crates/smelt-parser/fuzz/fuzz_targets/: parse_never_panics.rs  round_trip.rs
crates/smelt-parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs  printer.rs  syntax_kind.rs
crates/smelt-parser/tests/: README.md  proptest_generators.rs  proptest_round_trip.rs
crates/smelt-testdata/: Cargo.toml
crates/smelt-testdata/examples/: generate_events.rs
crates/smelt-testdata/src/: backend_integration.rs  builder.rs  config.rs  core.rs  distributions.rs  generator.rs  lib.rs  output.rs  presets.rs  rng.rs
crates/sqt-cli/: Cargo.toml
crates/sqt-cli/src/: compiler.rs  config.rs  discovery.rs  errors.rs  executor.rs  graph.rs  lib.rs  main.rs
crates/sqt-db/src/: lib.rs
crates/sqt-examples/examples/: example1_naive.rs  example1_optimized.rs  example2_naive.rs  example2_optimized.rs
crates/sqt-lsp/: Cargo.toml
crates/sqt-lsp/src/: main.rs
crates/sqt-parser/: Cargo.toml
crates/sqt-parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs  syntax_kind.rs
docker/: gitconfig
docs/: CLAUDE.md  DESIGN.md  ROADMAP.md  architecture_overview.md  example2_insights.md  lsp_architecture.md  lsp_quickstart.md  optimization_rule_api_design.md
editors/vscode/: README.md  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: smelt.tmLanguage.json
examples/: README.md  setup_sources.sql  smelt.yml  sources.yml
examples/models/: daily_revenue.sql  events.sql  session_rollup.sql  transactions.sql  user_activity.sql  user_summary.sql  users.sql
test-workspace/: README.md  TESTING.md  check-setup.sh  setup_sources.sql  smelt.yml  sources.yml  test-workspace.code-workspace
test-workspace/models/: broken_model.sql  user_sessions.sql  user_stats.sql
