[workspace]
members = ["crates/*"]
exclude = ["crates/smelt-parser/fuzz"]
resolver = "2"

[workspace.metadata.rust-analyzer]
# Enable proc macros for Salsa
procMacro.enable = true

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Andrew Browne"]
license = "MIT"

[workspace.dependencies]
# DataFusion for SQL parsing and logical plans
datafusion = "43"
# DuckDB for testing and execution (bundled to avoid system dependency)
duckdb = { version = "1.1", features = ["bundled"] }
# Arrow for data interchange - must match duckdb's arrow version
arrow = "54"
# Error handling
anyhow = "1.0"
thiserror = "2.0"
# Async runtime
tokio = { version = "1", features = ["full"] }

# Salsa for incremental computation
salsa = "0.16"
# LSP infrastructure
tower-lsp = "0.20"
lsp-types = "0.94"  # Must match tower-lsp's version
# Rowan for CST (lossless concrete syntax tree)
rowan = "0.15"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
# UUID generation
uuid = { version = "1.0", features = ["v4"] }
# Date/time handling
chrono = "0.4"
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
