[package]
name = "smelt-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "smelt"
path = "src/main.rs"

[dependencies]
# Core smelt dependencies
smelt-parser = { path = "../smelt-parser" }
smelt-db = { path = "../smelt-db" }
smelt-backend = { path = "../smelt-backend" }
smelt-backend-duckdb = { path = "../smelt-backend-duckdb" }
smelt-backend-spark = { path = "../smelt-backend-spark", optional = true }

# Parser dependencies (for TextRange, etc.)
rowan.workspace = true

# Async runtime
tokio.workspace = true

# Execution
arrow.workspace = true

# CLI
clap = { version = "4.4", features = ["derive"] }

# Config parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Date/time handling
chrono = "0.4"

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# File system
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["duckdb"]
duckdb = []
spark = ["smelt-backend-spark"]
