[package]
name = "smelt-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
salsa.workspace = true
anyhow.workspace = true
rowan.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
smelt-parser = { path = "../smelt-parser" }
