[package]
name = "smelt-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "smelt-lsp"
path = "src/main.rs"

[dependencies]
smelt-db = { path = "../smelt-db" }
smelt-parser = { path = "../smelt-parser" }

tower-lsp.workspace = true
lsp-types.workspace = true
tokio.workspace = true
anyhow.workspace = true

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
