[package]
name = "smelt-testdata"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Test data generation for smelt - realistic behavioral event data"

[dependencies]
# Backend trait for integration
smelt-backend = { path = "../smelt-backend" }

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Arrow for RecordBatch output
arrow.workspace = true

# Async for backend integration
tokio.workspace = true
async-trait = "0.1"

# Serialization (for properties map)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
# For testing with DuckDB
smelt-backend-duckdb = { path = "../smelt-backend-duckdb" }
tempfile = "3.8"
