[package]
name = "sqt-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "sqt"
path = "src/main.rs"

[dependencies]
# Core sqt dependencies
sqt-parser = { path = "../sqt-parser" }
sqt-db = { path = "../sqt-db" }

# Parser dependencies (for TextRange, etc.)
rowan.workspace = true

# Execution
duckdb.workspace = true
arrow.workspace = true

# CLI
clap = { version = "4.4", features = ["derive"] }

# Config parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# File system
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.8"
